--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
                 <img src="assets/images/resume-pic.png" class="logo-img">
                 <p class="logo-name">Antreas Drakopoulos</p>
               </div>
+              <div class="dropdown">
+                <button class="dropbtn">D
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#header">Home</a>
+                  <a href="aboutme.html" target="_blank">About</a>
+                  <a href="projects.html" target="_blank">Projects</a>
+                  <a href="#contact-me">Contact</a>
+                </div>
+              </div> 
             </div>
             <li class="nav-list name"><a href="#header">Home</a></li>
             <li class="nav-list about"><a href="aboutme.html" target="_blank">About</a></li>
