--- a/index.html
+++ b/index.html
@@ -42,14 +42,23 @@
         </nav>
         <div class="message-container">
           <div class="introduction">
-            <h1 class="name-intro">HEY, I'M ANTREAS DRAKOPOULOS</h1>
+            <h1 class="name-intro">HEY, I'M ANTREAS</h1>
             <h3 class="overall-intro">A Frontend Web Developer building Frontend Websites and Web Aplications that leads to the success of the overall product</h3>
           </div>
           <div class="projects-btn-container">
             <a href="projects.html" class="projects-btn" target="_blank">PROJECTS</a>
           </div>
         </div>
-        <!-- TODO ADD SIDEBAR (LEFT) WITH SOCIAL MEDIA INFO AND OTHER WAYS TO CONTACT -->
+      </div>
+      <!-- TODO ADD SIDEBAR (LEFT) WITH SOCIAL MEDIA INFO AND OTHER WAYS TO CONTACT -->
+      <div class="social-media-container">
+        <ul class="social-media-expand-btn">
+          <li class="social-media-icon"></li>
+          <li class="social-media-icon"></li>
+          <li class="social-media-icon"></li>
+          <li class="social-media-icon"></li>
+          <li class="social-media-icon"></li>
+        </ul>
       </div>
     </section>
     <!-- TODO MOVE ABOUT ME TO THE BOTTOM SIDE NEXT TO CONTACT ME AND SEE HOW IT LOOKS -->
